[package]
name = "miiverse"
version = "0.1.0"
authors = ["Ali Hussain (Coolsonickirby/Random) <alihussain2001@gmail.com>"]
edition = "2018"

[package.metadata.skyline]
titleid = "01006A800016E000"

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }
skyline_smash = { git = "https://github.com/ultimate-research/skyline-smash.git" }
arcropolis-api = { git = "https://github.com/Raytwo/arcropolis_api" }
minreq = { version = "=2.2.1", features = ["https", "json-using-serde"] }
serde = { version = "1.0", features = ["derive"] }
nutexb = { git = "https://github.com/jam1garner/nutexb" }
image = "0.23.10"

[patch.crates-io]
ring = { git = "https://github.com/skyline-rs/ring" }
webpki = { git = "https://github.com/skyline-rs/webpki" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
